# rag-study-assistant

./: .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_gemini.py  test_llm_local.py  test_rag.py
THIRD_PARTY_LICENSES/: numpy.txt  pytorch.txt  scipy.txt  tqdm.txt  uvicorn.txt
THIRD_PARTY_LICENSES/sentence-transformers/: all-MiniLM-L6-v2.md
data/: embeddings.npy  query_result.json  test.txt  test_cases.json
frontend/: index.html
rag/: app.py  gcs_utils.py  llm_wrapper.py  query_faiss.py  test_llm_query.py
rag/data/: goz_stablelm-zephyr-3b.txt  manual_stablelm-zephyr-3b.txt
src/: embed_faiss.py  eval_rag.py  ingest.py
tests/: quick_test.py
tests/evaluation/: evaluate_retrieval.py  gold_passages.json  test_retrieval_quality.py
tests/performance/: test_chunks.json  test_faiss_speed.py
